--- a/style/style.css
+++ b/style/style.css
@@ -82,11 +82,16 @@ nav>div>img {
 h1 {
     font-family: 'SOFIAPROSOFTBOLD';
     font-size: 35px;
+    color: black;
+}
+
+.tech {
+    color: white;
 }
 
 a {
     text-decoration: none;
-    color: var(--black);
+    color: black;
 
 }
 
@@ -97,7 +102,7 @@ a {
 
 .nav-panel>li>a {
     overflow: hidden;
-    color: black;
+    color: white;
     text-decoration: none;
     font-family: '9Slide03SOFIAPROSOFTLIGHT';
     font-weight: 900;
