--- a/style/about-us.css
+++ b/style/about-us.css
@@ -1,10 +1,15 @@
-.about-us-header{
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Your Preferred Font', sans-serif; /* Add your preferred font */
+}
+
+.about-us-header {
     position: fixed;
-    
-    justify-content: space-between;
-    top: 0px;
-    background-color: white;
+    top: 0;
+    left: 0;
     width: 100%;
+    background-color: white;
     z-index: 1000;
 }
 
@@ -29,26 +34,24 @@
     font-size: 80px;
     text-align: center;
     position: absolute;
-    align-items: center;
     color: rgb(37, 37, 73);
-
 }
 
-.about-us-main-text h2{
+.about-us-main-text h2 {
     position: absolute;
     text-align: left;
     color: rgb(37, 37, 73);
-
 }
-.about-us-main-descp{
+
+.about-us-main-descp {
     width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
 }
-.about-us-main-descp h2{
+
+.about-us-main-descp h2 {
     text-align: center;
     font-size: 55px;
     width: 70%;
@@ -60,9 +63,11 @@
     opacity: 0.5;
     transition: .4s ease;
 }
-.about-us-main-descp h2:hover{
+
+.about-us-main-descp h2:hover {
     opacity: 1;
 }
+
 .about-us-main-descp p {
     font-size: 20px;
     text-align: justify;
@@ -70,13 +75,12 @@
     text-indent: 12px;
 }
 
-.about-us-second-cont{
+.about-us-second-cont {
     margin: 100px 50px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     gap: 25px;
- 
 }
 
 .about-us-second-cont img {
@@ -84,18 +88,12 @@
     padding: 0;
 }
 
-.about-us-second-cont-text{
+.about-us-second-cont-text {
     padding: 60px;
-}
-
-.about-us-second-cont-text{
-    color: #4d4d4d;
-
 }
 
 .about-us-second-cont-text p {
     text-align: justify;
     font-size: 20px;
     color: #4d4d4d;
-
 }
