--- a/style/style.css
+++ b/style/style.css
@@ -1,612 +1,656 @@
 @font-face {
-    font-family: 'SOFIAPROSOFTBOLD';
-    src: local('SOFIAPROSOFTBOLD'), url('../fonts/SOFIAPROSOFTBOLD.woff') format('woff');
+  font-family: "SOFIAPROSOFTBOLD";
+  src: local("SOFIAPROSOFTBOLD"),
+    url("../fonts/SOFIAPROSOFTBOLD.woff") format("woff");
 }
 
 @font-face {
-    font-family: '9Slide03SOFIAPROSOFTLIGHT';
-    src: local('9Slide03SOFIAPROSOFTLIGHT'), url('../fonts/9Slide03SOFIAPROSOFTLIGHT.woff') format('woff');
+  font-family: "9Slide03SOFIAPROSOFTLIGHT";
+  src: local("9Slide03SOFIAPROSOFTLIGHT"),
+    url("../fonts/9Slide03SOFIAPROSOFTLIGHT.woff") format("woff");
 }
 
 :root {
-    --black: #1b1b1b;
-    --white: #f8f8f8;
-    --blue: #6064ad;
-    --grey: #f3f3f3;
-    --light-blue: #989cd0;
+  --black: #1b1b1b;
+  --white: #f8f8f8;
+  --blue: #6064ad;
+  --grey: #f3f3f3;
+  --light-blue: #989cd0;
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #4e4ad9;
-    border-radius: 50px;
+  background: #4e4ad9;
+  border-radius: 50px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #8d8d8d;
+  background: #8d8d8d;
 }
 
 ::-webkit-scrollbar:hover {
-    width: 10px;
-    transition: 1.5s ease;
-
+  width: 10px;
+  transition: 1.5s ease;
 }
 
-
 body {
-    user-select: none;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    font-family: '9Slide03SOFIAPROSOFTLIGHT';
-    font-size: 19px;
-
+  user-select: none;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  font-family: "9Slide03SOFIAPROSOFTLIGHT";
+  font-size: 19px;
 }
 
 div {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    position: sticky;
-    /* background: hsl(285, 83%, 55%); */
-    background-image: linear-gradient(90deg, #4e4ad9, #af14b9, #e20088, #f0447a, #4e4ad9);
-    height: 85px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: sticky;
+  /* background: hsl(285, 83%, 55%); */
+  background-image: linear-gradient(
+    90deg,
+    #4e4ad9,
+    #af14b9,
+    #e20088,
+    #f0447a,
+    #4e4ad9
+  );
+  height: 85px;
 }
 
-nav>ul {
-    display: flex;
-    list-style: none;
-    gap: 2px;
-    padding: 0;
+nav > ul {
+  display: flex;
+  list-style: none;
+  gap: 2px;
+  padding: 0;
 }
 
-nav>div>img {
-    width: 35px;
-    height: fit-content;
-    padding: 39px 5px;
+nav > div > img {
+  width: 35px;
+  height: fit-content;
+  padding: 39px 5px;
 }
 
 .logo {
-    display: flex;
-    align-items: start;
+  display: flex;
+  align-items: start;
 }
 
-
 h1 {
-    font-family: 'SOFIAPROSOFTBOLD';
-    font-size: 35px;
-    color: black;
+  font-family: "SOFIAPROSOFTBOLD";
+  font-size: 35px;
+  color: black;
 }
 
 .tech {
-    color: white;
+  color: white;
 }
 
 a {
-    text-decoration: none;
-    color: black;
-
+  text-decoration: none;
+  color: black;
 }
 
 #dropdown {
-    font-size: 20px;
-
+  font-size: 20px;
 }
 
-.nav-panel>li>a {
-    overflow: hidden;
-    color: white;
-    text-decoration: none;
-    font-family: '9Slide03SOFIAPROSOFTLIGHT';
-    font-weight: 900;
-    display: block;
-    position: relative;
-    margin-left: 100px;
-    line-height: 30px;
+.nav-panel > li > a {
+  overflow: hidden;
+  color: white;
+  text-decoration: none;
+  font-family: "9Slide03SOFIAPROSOFTLIGHT";
+  font-weight: 900;
+  display: block;
+  position: relative;
+  margin-left: 100px;
+  line-height: 30px;
 }
 
-.nav-panel>li>a::after {
-    content: "";
-    position: absolute;
-    bottom: 1px;
-    left: 0;
-    width: 0px;
-    height: 2px;
-    background-image: linear-gradient(to left, #fff, #4e4ad9, #af14b9, #fff, #e20088, #e7a4b9, #ffffff);
-    background-size: 200%;
-    border-radius: 50px;
-    transition: 0.7s ease;
-    animation: anim 2s linear infinite;
+.nav-panel > li > a::after {
+  content: "";
+  position: absolute;
+  bottom: 1px;
+  left: 0;
+  width: 0px;
+  height: 2px;
+  background-image: linear-gradient(
+    to left,
+    #fff,
+    #4e4ad9,
+    #af14b9,
+    #fff,
+    #e20088,
+    #e7a4b9,
+    #ffffff
+  );
+  background-size: 200%;
+  border-radius: 50px;
+  transition: 0.7s ease;
+  animation: anim 2s linear infinite;
 }
 
-.nav-panel>li>a:hover::after {
-    width: 150px;
-
+.nav-panel > li > a:hover::after {
+  width: 150px;
 }
 
 @keyframes anim {
-    from {
-        background-position: 400%;
-    }
+  from {
+    background-position: 400%;
+  }
 
-    to {
-        background-position: 0%;
-
-    }
+  to {
+    background-position: 0%;
+  }
 }
 
-
-nav>ul {
-    margin: 0;
+nav > ul {
+  margin: 0;
 }
 
-nav>ul:nth-child(3) {
-    display: flex;
-    align-items: center;
+nav > ul:nth-child(3) {
+  display: flex;
+  align-items: center;
 }
 
-nav>ul:nth-child(3)>li>a {
-    padding: 10px 20px;
-    border-radius: 3px;
-    font-weight: 600;
-    display: flex;
-    gap: 10px;
-    align-items: center;
+nav > ul:nth-child(3) > li > a {
+  padding: 10px 20px;
+  border-radius: 3px;
+  font-weight: 600;
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
-
 
 nav .navigation {
-    display: none;
+  display: none;
 }
 
 nav .btns {
-    display: none;
+  display: none;
 }
 
-.buttons>a {
-    transition: .6s ease;
+.buttons > a {
+  transition: 0.6s ease;
 }
 
-.buttons>a:hover {
-    background-color: black;
-    color: white;
-
+.buttons > a:hover {
+  background-color: black;
+  color: white;
 }
 
 .main-container {
-    margin: 50px 0;
-    display: flex;
+  margin: 50px 0;
+  display: flex;
 
-    justify-content: space-around;
-    align-items: center;
-
+  justify-content: space-around;
+  align-items: center;
 }
 
 .main-text {
-
-    border-radius: 45px 7px;
-    padding: 12px 35px 20px;
-    transition: 0.6s ease;
-    border: 1px solid #ffffff;
-
+  border-radius: 45px 7px;
+  padding: 12px 35px 20px;
+  transition: 0.6s ease;
+  border: 1px solid #ffffff;
 }
 
 .main-text:hover {
-
-    border: 1px solid #1b1b1b;
-    box-shadow: 12px 12px 20px 1.2px var(--grey);
+  border: 1px solid #1b1b1b;
+  box-shadow: 12px 12px 20px 1.2px var(--grey);
 }
 
-.main-text>h1 {
-    font-size: 80px;
-    line-height: 0;
+.main-text > h1 {
+  font-size: 80px;
+  line-height: 0;
 
-    box-sizing: border-box;
-    padding-left: 15px;
+  box-sizing: border-box;
+  padding-left: 15px;
 }
-
-
-
 
 .main-p {
-    font-family: '9Slide03SOFIAPROSOFTLIGHT' !important;
-    font-size: 32px;
+  font-family: "9Slide03SOFIAPROSOFTLIGHT" !important;
+  font-size: 32px;
 }
-
 
 .main-p2 {
-    text-align: right;
-    font-size: 20px;
+  text-align: right;
+  font-size: 20px;
 }
 
-.main-p2>a>span {
-    color: #4e4ad9;
-    font-family: 'SOFIAPROSOFTBOLD';
+.main-p2 > a > span {
+  color: #4e4ad9;
+  font-family: "SOFIAPROSOFTBOLD";
 }
 
 .main-img {
-    margin: 15px 0;
+  margin: 15px 0;
 }
 
-.main-img>img {
-    border-radius: 15px;
-    box-shadow: 14px 14px 20px 1.2px #b9bac3;
-
+.main-img > img {
+  border-radius: 15px;
+  box-shadow: 14px 14px 20px 1.2px #b9bac3;
 }
 
 .courses {
-    margin: 100px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin: 100px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.courses>h1 {
-    text-align: center;
+.courses > h1 {
+  text-align: center;
 }
 
 .cards {
-    padding: 65px;
-    margin: 90px;
-    display: flex;
-    border-radius: 35px 12px;
-    width: 97%;
-    gap: 30px;
-    overflow-x: scroll;
-    background-color: var(--grey);
+  padding: 65px;
+  margin: 90px;
+  display: flex;
+  border-radius: 35px 12px;
+  width: 97%;
+  gap: 30px;
+  overflow-x: scroll;
+  background-color: var(--grey);
 }
 
-
 .cards::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .card {
-    display: flex;
-    justify-content: space-between;
-    width: 700px;
-    height: 330px;
-    border-radius: 35px 12px;
-    background: #4630d4;
-    color: var(--white);
-    gap: 15px;
-    transition: .6s ease;
-
+  display: flex;
+  justify-content: space-between;
+  width: 700px;
+  height: 330px;
+  border-radius: 35px 12px;
+  background: #4630d4;
+  color: var(--white);
+  gap: 15px;
+  transition: 0.6s ease;
 }
 
-
-
-.card>img {
-    border-radius: 35px 12px;
-    border: #6064ad 1px solid;
-    width: 400px;
+.card > img {
+  border-radius: 35px 12px;
+  border: #6064ad 1px solid;
+  width: 400px;
 }
-
-
 
 .card:hover {
-
-    box-shadow: 12px 12px 30px 1px #a7a7a7;
-    transform: scale(1.001) translate(-5px, -5px);
+  box-shadow: 12px 12px 30px 1px #a7a7a7;
+  transform: scale(1.001) translate(-5px, -5px);
 }
 
 .card-content {
-    width: 300px;
+  width: 300px;
 }
 
 .card-text {
-    padding: 15px 25px 15px 0;
+  padding: 15px 25px 15px 0;
 }
 
-.card-text>h2 {
-    text-align: center;
+.card-text > h2 {
+  text-align: center;
 }
 
-.card-text>p {
-    text-indent: 12px;
-    font-size: 19px;
-    text-align: justify;
+.card-text > p {
+  text-indent: 12px;
+  font-size: 19px;
+  text-align: justify;
 }
 
 .card-span {
-    display: inline-block;
+  display: inline-block;
 }
 
 .card-action {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
 }
 
-.card-action>a {
-    color: var(--white);
-    border: 1px solid var(--white);
-    font-size: 18px;
-    padding: 10px 20px;
-    border-radius: 3px;
+.card-action > a {
+  color: var(--white);
+  border: 1px solid var(--white);
+  font-size: 18px;
+  padding: 10px 20px;
+  border-radius: 3px;
 
-    font-family: 'SOFIAPROSOFTBOLD';
-    transition: .6s ease;
+  font-family: "SOFIAPROSOFTBOLD";
+  transition: 0.6s ease;
 }
 
-.card-action>a:hover {
-    background-color: #989cd0;
-    color: var(--blue);
-    border: 1px solid var(--white);
+.card-action > a:hover {
+  background-color: #989cd0;
+  color: var(--blue);
+  border: 1px solid var(--white);
 }
-
 
 .search-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--blue);
-    color: var(--white);
-    font-size: 22px;
-    padding: 50px 0;
-    border-radius: 35px 12px;
-    width: 99%;
-    margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--blue);
+  color: var(--white);
+  font-size: 22px;
+  padding: 50px 0;
+  border-radius: 35px 12px;
+  width: 99%;
+  margin: auto;
 }
 
 .search {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 50px 0;
-    gap: 55px;
-    box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 50px 0;
+  gap: 55px;
+  box-sizing: border-box;
 
-    padding: 100px;
-    border-radius: 35px 15px;
-    border: 1px var(--white) solid;
+  padding: 100px;
+  border-radius: 35px 15px;
+  border: 1px var(--white) solid;
 }
 
-.search>img {
-    width: 450px;
-    border-radius: 12px;
-    box-shadow: 12px 12px 20px .5px #4e518e;
-
+.search > img {
+  width: 450px;
+  border-radius: 12px;
+  box-shadow: 12px 12px 20px 0.5px #4e518e;
 }
-
 
 .search-text {
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 
-.search-text>p {
-    text-indent: 15px;
+.search-text > p {
+  text-indent: 15px;
 }
 
 .search-form {
-    display: flex;
-    align-items: center;
-    gap: 3px;
-
+  display: flex;
+  align-items: center;
+  gap: 3px;
 }
 
-.search-form>input {
-    padding: 10px 12px 10px 35px;
-    width: 250px;
-    font-size: 20px;
-    color: #6064ad;
-    border: 1px solid var(--white);
-    border-radius: 5px;
-    outline: none;
+.search-form > input {
+  padding: 10px 12px 10px 35px;
+  width: 250px;
+  font-size: 20px;
+  color: #6064ad;
+  border: 1px solid var(--white);
+  border-radius: 5px;
+  outline: none;
 }
 
-.search-form>input::-webkit-input-placeholder {
-    color: #6064adb8;
-    font-family: '9Slide03SOFIAPROSOFTLIGHT';
+.search-form > input::-webkit-input-placeholder {
+  color: #6064adb8;
+  font-family: "9Slide03SOFIAPROSOFTLIGHT";
 }
 
 .search-form i {
-    position: absolute;
-    color: #6064ad;
-    padding-left: 9px;
-    font-size: 18px;
+  position: absolute;
+  color: #6064ad;
+  padding-left: 9px;
+  font-size: 18px;
 }
 
-.search-form>a {
-    color: var(--white);
-    border: 1px solid var(--white);
+.search-form > a {
+  color: var(--white);
+  border: 1px solid var(--white);
 
-    font-size: 20px;
-    padding: 10px 20px;
-    border-radius: 5px;
-    background-color: var(--blue);
-    transition: .6s ease;
-    font-family: 'SOFIAPROSOFTBOLD';
-
+  font-size: 20px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: var(--blue);
+  transition: 0.6s ease;
+  font-family: "SOFIAPROSOFTBOLD";
 }
 
-.search-form>a:hover {
-    background-color: var(--light-blue);
-    color: var(--blue);
+.search-form > a:hover {
+  background-color: var(--light-blue);
+  color: var(--blue);
 }
-
 
 .about-us-container {
-    margin: 100px 10px;
-    padding: 50px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 50px;
-    border-radius: 35px 12px;
-    width: 99%;
+  margin: 100px 10px;
+  padding: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 50px;
+  border-radius: 35px 12px;
+  width: 99%;
 
-    border: 1px solid var(--blue);
+  border: 1px solid var(--blue);
 }
 
-.about-us-container>img {
-    box-sizing: border-box;
-    border-radius: 35px 12px;
-    width: 600px;
-    box-shadow: 12px 12px 10px .5px #5a5da175;
-
+.about-us-container > img {
+  box-sizing: border-box;
+  border-radius: 35px 12px;
+  width: 600px;
+  box-shadow: 12px 12px 10px 0.5px #5a5da175;
 }
 
 .about-us-text {
-    padding: 0 70px;
-    justify-content: center;
+  padding: 0 70px;
+  justify-content: center;
 }
 
-.about-us-text>h1 {
-    text-align: center;
-    margin-bottom: 50px;
+.about-us-text > h1 {
+  text-align: center;
+  margin-bottom: 50px;
 }
 
-.about-us-text-block>h2 {
-    padding: 0 25px;
+.about-us-text-block > h2 {
+  padding: 0 25px;
 }
 
-.about-us-text-block>p {
-    font-size: 20px;
-    text-indent: 15px;
-    text-align: justify;
+.about-us-text-block > p {
+  font-size: 20px;
+  text-indent: 15px;
+  text-align: justify;
 }
 
 footer {
-    display: flex;
-    justify-content: space-around;
-    align-items: start;
-    background-image: linear-gradient(90deg, #4e4ad9, #af14b9, #e20088, #f0447a, #4e4ad9);
-    padding: 100px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: start;
+  background-image: linear-gradient(
+    90deg,
+    #4e4ad9,
+    #af14b9,
+    #e20088,
+    #f0447a,
+    #4e4ad9
+  );
+  padding: 100px 0;
 }
 
 .footer-1 {
-    display: flex;
-    flex-direction: column;
-    gap: 45px;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 45px;
+  align-items: center;
 }
 
 .footer-logo-cont {
-    display: flex;
-    align-items: center;
-    border-radius: 35px 5px;
-    background-color: var(--white);
-    padding: 0 13px;
+  display: flex;
+  align-items: center;
+  border-radius: 35px 5px;
+  background-color: var(--white);
+  padding: 0 13px;
 }
 
 .payment-cont {
-    display: flex;
-    flex-direction: column;
-    padding: 7px 20px;
-    background-color: var(--light-blue);
-    border-radius: 5px;
-    line-height: 0;
-    font-size: 20px;
-    color: #4e518e;
-    align-items: center;
-    opacity: .5;
+  display: flex;
+  flex-direction: column;
+  padding: 7px 20px;
+  background-color: var(--light-blue);
+  border-radius: 5px;
+  line-height: 0;
+  font-size: 20px;
+  color: #4e518e;
+  align-items: center;
+  opacity: 0.5;
 }
 
 .payment-cont:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
-.payment-cont>img {
-    width: 70px;
-    border-radius: 15px;
+.payment-cont > img {
+  width: 70px;
+  border-radius: 15px;
 }
 
-.footer-logo-cont>img {
-    width: 30px;
+.footer-logo-cont > img {
+  width: 30px;
 }
-
 
 .footer-2 {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    color: white;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  color: white;
 }
 
 .footer-2 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    gap: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 15px;
 }
 
 .footer-2 a {
-    color: var(--white);
-    display: flex;
-    gap: 15px;
+  color: var(--white);
+  display: flex;
+  gap: 15px;
 }
 
 .footer-3 {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    color: white;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  color: white;
 }
 
 .footer-3 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    gap: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 15px;
 }
 
 .footer-3 a {
-    color: var(--white);
-    display: flex;
-    gap: 15px;
+  color: var(--white);
+  display: flex;
+  gap: 15px;
 }
 
 .form-mail-section {
-    color: white;
-    font-size: 24px;
-    font-weight: 200;
+  color: white;
+  font-size: 24px;
+  font-weight: 200;
 }
 
-.footer-action>input {
-    padding: 10px 12px;
-    width: 250px;
-    font-size: 20px;
-    color: #6064ad;
-    border: 1px solid var(--white);
-    border-radius: 10px;
+.footer-action > input {
+  padding: 10px 12px;
+  width: 250px;
+  font-size: 20px;
+  color: #6064ad;
+  border: 1px solid var(--white);
+  border-radius: 10px;
 }
 
-
-.footer-action>input::-webkit-input-placeholder {
-    color: #6064adb8;
-    font-family: '9Slide03SOFIAPROSOFTLIGHT';
+.footer-action > input::-webkit-input-placeholder {
+  color: #6064adb8;
+  font-family: "9Slide03SOFIAPROSOFTLIGHT";
 }
 
-.footer-action>button {
-    color: var(--white);
-    border: 1px solid var(--white);
-    background-color: var(--light-blue);
-    font-size: 20px;
-    padding: 8px 8px;
-    border-radius: 10px;
-    transition: .6s ease;
-    font-family: 'SOFIAPROSOFTBOLD';
-
+.footer-action > button {
+  color: var(--white);
+  border: 1px solid var(--white);
+  background-color: var(--light-blue);
+  font-size: 20px;
+  padding: 8px 8px;
+  border-radius: 10px;
+  transition: 0.6s ease;
+  font-family: "SOFIAPROSOFTBOLD";
 }
 
-.footer-action>button:hover {
-    background-color: var(--blue);
-
+.footer-action > button:hover {
+  background-color: var(--blue);
 }
 
 .footer-rights {
-    color: white;
+  color: white;
+}
+
+.gallery-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
+
+.video-container {
+  position: relative;
+  width: 560px; /* Set the width of your video container */
+  height: 315px; /* Set the height of your video container */
+}
+
+.video-container iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+.card {
+    max-width: 300px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px 8px 0 0;
+}
+
+.card-content {
+    padding: 15px;
+    text-align: center;
+}
+
+.card-content h3 {
+    margin-bottom: 10px;
+}
+
+.card-content a {
+    display: block;
+    padding: 8px;
+    background-color: #4CAF50;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+.card-content a:hover {
+    background-color: #45a049;
 }
